<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1BDD2C00">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:shadowColor="#711E04"
                android:background="#BA00BFA5"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/check_in_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/check_in_date"
                android:textAlignment="textStart"
                android:textColor="#711E04"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <DatePicker
                android:id="@+id/checkin_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view" />

            <TextView
                android:id="@+id/check_out_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:text="@string/check_out_date"
                android:textAlignment="textStart"
                android:textColor="#711E04"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker_view" />

            <DatePicker
                android:id="@+id/checkout_date_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/check_out_date_text_view"
                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view" />

            <TextView
                android:id="@+id/guests_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_guests"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/checkout_date_picker_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#711E04"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start"/>

            <EditText
                android:id="@+id/guests_count_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guests_text_view"
                app:layout_constraintTop_toTopOf="@id/guests_text_view"
                app:layout_constraintBottom_toBottomOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="Guests Count"
                android:inputType="number" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintTop_toBottomOf="@id/guests_text_view"
                android:text="@string/enter_your_name"
                android:textSize="20sp"
                android:textColor="#711E04"
                android:fontFamily="sans-serif"
                android:textAlignment="textStart"
                android:gravity="start" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/name_text_view"
                app:layout_constraintTop_toTopOf="@id/name_text_view"
                app:layout_constraintBottom_toBottomOf="@id/name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="Your Name" />


            <TextView
                android:id="@+id/search_confirm_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_text_view"/>

            <Button
                android:id="@+id/confirm_my_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button"/>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/search_button"/>


            <Button
                android:id="@+id/retrieve_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_shared_pref"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/clear_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>